fixing menu on iPhone/iPad

--- a/content/css/core.css
+++ b/content/css/core.css
@@ -396,6 +396,10 @@ body{
     position: static;
 }
 
+.menu-fixed {
+    position: fixed;
+}
+
 .menu-absolute {
     position: absolute;
 }
